--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "msal": "^1.4.18",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
